[fix] enter send the message, and shift enter for next line

--- a/teamSpark/src/main/resources/static/styles/textMessaging.css
+++ b/teamSpark/src/main/resources/static/styles/textMessaging.css
@@ -790,3 +790,7 @@ pre {
     max-height: 400px; /* Adjust as needed */
     overflow-y: scroll;
 }
+
+.message-content p {
+    margin-bottom: 0;
+}
